Move dependencies back as they were.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,31 @@
     "postinstall": "electron-builder install-app-deps && node ./build/downloadDaemon.js",
     "postinstall:warning": "echo '\n\nWARNING\n\nNot all node modules were installed because NODE_ENV is set to \"production\".\nThis should only be set after installing dependencies with \"yarn\". The app will not work.\n\n'"
   },
+  "dependencies": {
+    "@electron/remote": "^2.0.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.2.1",
+    "@ungap/from-entries": "^0.2.1",
+    "auto-launch": "^5.0.5",
+    "electron-dl": "^3.2.0",
+    "electron-log": "^4.4.8",
+    "electron-notarize": "^1.0.0",
+    "electron-updater": "^4.2.4",
+    "express": "^4.17.1",
+    "humanize-duration": "^3.27.0",
+    "match-sorter": "^6.3.0",
+    "mime": "^3.0.0",
+    "node-html-parser": "^5.1.0",
+    "parse-duration": "^1.0.0",
+    "proxy-polyfill": "0.1.6",
+    "re-reselect": "^4.0.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-datetime-picker": "^3.4.3",
+    "source-map-explorer": "^2.5.2",
+    "sudo-prompt": "^9.2.1",
+    "tempy": "^0.6.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -54,12 +79,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@datapunt/matomo-tracker-js": "^0.1.4",
-    "@electron/remote": "^2.0.1",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@hot-loader/react-dom": "^16.13",
     "@meetfranz/electron-cookies": "^3.0.2",
-    "@mui/material": "^5.2.1",
     "@reach/combobox": "^0.12.1",
     "@reach/menu-button": "0.8.6",
     "@reach/rect": "^0.16.0",
@@ -69,9 +90,7 @@
     "@sentry/browser": "^5.12.1",
     "@sentry/webpack-plugin": "^1.10.0",
     "@types/three": "^0.103.2",
-    "@ungap/from-entries": "^0.2.1",
     "adm-zip": "^0.4.13",
-    "auto-launch": "^5.0.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.4",
@@ -98,11 +117,7 @@
     "electron": "17.0.0",
     "electron-builder": "^22.10.5",
     "electron-devtools-installer": "^3.1.1",
-    "electron-dl": "^3.2.0",
     "electron-is-dev": "^0.3.0",
-    "electron-log": "^4.4.8",
-    "electron-notarize": "^1.0.0",
-    "electron-updater": "^4.2.4",
     "electron-webpack": "^2.8.2",
     "electron-window-state": "^4.1.1",
     "emoji-dictionary": "^1.0.11",
@@ -120,14 +135,12 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.1",
-    "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "flow-bin": "^0.97.0",
     "flow-typed": "^3.7.0",
     "formik": "^0.10.4",
     "hast-util-sanitize": "^3.0.2",
     "history": "^4.9.0",
-    "humanize-duration": "^3.27.0",
     "husky": "^3.1.0",
     "imagesloaded": "^4.1.4",
     "json-loader": "^0.5.4",
@@ -135,30 +148,22 @@
     "localforage": "^1.7.1",
     "lodash-es": "^4.17.21",
     "mammoth": "^1.4.16",
-    "match-sorter": "^6.3.0",
-    "mime": "^3.0.0",
     "moment": "^2.29.2",
     "node-fetch": "^2.6.7",
-    "node-html-parser": "^5.1.0",
     "node-loader": "^0.6.0",
     "node-wget": "^0.4.3",
     "nodemon": "^1.19.1",
-    "parse-duration": "^1.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-rtl": "^1.7.3",
     "preprocess-loader": "^0.3.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.6.2",
-    "proxy-polyfill": "0.1.6",
     "qrcode.react": "^0.8.0",
     "raw-loader": "^2.0.0",
     "rc-progress": "^2.0.6",
-    "re-reselect": "^4.0.0",
     "react": "^16.8.2",
     "react-awesome-lightbox": "^1.7.3",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-datetime-picker": "^3.4.3",
     "react-dom": "^16.8.2",
     "react-draggable": "^3.3.0",
     "react-google-recaptcha": "^2.0.1",
@@ -185,11 +190,8 @@
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
-    "source-map-explorer": "^2.5.2",
     "strip-markdown": "^3.0.3",
     "style-loader": "^0.23.1",
-    "sudo-prompt": "^9.2.1",
-    "tempy": "^0.6.0",
     "terser-webpack-plugin": "^4.2.3",
     "three-full": "^28.0.2",
     "unist-util-visit": "^2.0.3",
