(patch) Port membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2529,6 +2529,7 @@
   "Pledge": "Pledge",
   "Description ": "Description ",
   "Become A Member": "Become A Member",
+  "Become a member": "Become a member",
   "Manage Your Membership Tiers": "Manage Your Membership Tiers",
   "Signup for $%membership_price% a month": "Signup for $%membership_price% a month",
   "Perks": "Perks",
@@ -2539,8 +2540,10 @@
   "Features and Perks": "Features and Perks",
   "Processing payment...": "Processing payment...",
   "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!": "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!",
-  "Membership Options": "Membership Options",
+  "Membership options": "Membership options",
   "Join Membership": "Join Membership",
+  "Members Only": "Members Only",
+  "Join for $%membership_price% per month": "Join for $%membership_price% per month",
   "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.": "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.",
   "Failed to fetch channel list.": "Failed to fetch channel list.",
   "You don't have any Tiers": "You don't have any Tiers",
@@ -2581,7 +2584,7 @@
   "Price must be lower or equal than %max%.": "Price must be lower or equal than %max%.",
   "A price is required.": "A price is required.",
   "Find creators that you like and support them. Your pledges will show up on this page.": "Find creators that you like and support them. Your pledges will show up on this page.",
-  "Only channel members can view this content": "Only channel members can view this content",
+  "Only channel members can view this content.": "Only channel members can view this content.",
   "You don't have any channels": "You don't have any channels",
   "To be able to begin receiving payments you have to have at least 1 channel.": "To be able to begin receiving payments you have to have at least 1 channel.",
   "--end--": "--end--"
