(patch) Port more membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2450,7 +2450,7 @@
   "This content is not available yet but you can pre-order it now so you can access it as soon as it goes live.": "This content is not available yet but you can pre-order it now so you can access it as soon as it goes live.",
   "Purchase your content for %currency%%amount%": "Purchase your content for %currency%%amount%",
   "Pre-order your content for %currency%%amount%": "Pre-order your content for %currency%%amount%",
-  "Add a card --[replaces add_a_card]--" : "Add a card",
+  "Add a card --[replaces add_a_card]--": "Add a card",
   "%add_a_card% to purchase content": "%add_a_card% to purchase content",
   "%add_a_card% to preorder content": "%add_a_card% to preorder content",
   "This content can be purchased for %currency%%amount%": "This content can be purchased for %currency%%amount%",
@@ -2489,9 +2489,9 @@
   "Membership": "Membership",
   "You are a \"%membership_tier_name%\" member": "You are a \"%membership_tier_name%\" member",
   "Odysee Perks": "Odysee Perks",
-  "Access to members-only content": "Access to members-only content",
-  "Access to members-only livestreams": "Access to members-only livestreams",
-  "Access to members-only chat": "Access to members-only chat",
+  "Access to members-only content and chat": "Access to members-only content and chat",
+  "Access to members-only livestreams and chat": "Access to members-only livestreams and chat",
+  "Access to members-only chat on public content": "Access to members-only chat on public content",
   "Badge shown in chat": "Badge shown in chat",
   "Exclusive content": "Exclusive content",
   "Exclusive livestreams": "Exclusive livestreams",
@@ -2511,6 +2511,7 @@
   "See Your Memberships": "See Your Memberships",
   "Total Supporters:": "Total Supporters:",
   "Total Monthly Income:": "Total Monthly Income:",
+  "Total Monthly Cost": "Total Monthly Income",
   "Total Received:": "Total Received:",
   "Channel Name": "Channel Name",
   "Supporters": "Supporters",
@@ -2533,8 +2534,8 @@
   "Manage Your Membership Tiers": "Manage Your Membership Tiers",
   "Signup for $%membership_price% a month": "Signup for $%membership_price% a month",
   "Perks": "Perks",
-  "Subscribing As": "Subscribing As",
-  "Subscribing To": "Subscribing To",
+  "Join Membership As": "Join Membership As",
+  "Joining Membership": "Joining Membership",
   "Membership Tier": "Membership Tier",
   "Monthly Cost": "Monthly Cost",
   "Features and Perks": "Features and Perks",
@@ -2576,10 +2577,15 @@
   "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.": "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.",
   "Cancel membership": "Cancel membership",
   "Cancel Membership": "Cancel Membership",
+  "This membership does not give you access to the members-only chat mode.": "This membership does not give you access to the members-only chat mode.",
   "This Tier does not grant you access to the currently selected content.": "This Tier does not grant you access to the currently selected content.",
+  "You can't upgrade or downgrade plans at the moment, coming soon!": "You can't upgrade or downgrade plans at the moment, coming soon!",
+  "This membership gives you access to the members-only chat mode.": "This membership gives you access to the members-only chat mode.",
+  "This membership gives you access to the current content.": "This membership gives you access to the current content.",
   "A membership name is required.": "A membership name is required.",
   "A membership description is required.": "A membership description is required.",
   "This membership has subscribers, you can't update the price currently.": "This membership has subscribers, you can't update the price currently.",
+  "This membership has active subscribers and cannot be deleted.": "This membership has active subscribers and cannot be deleted.",
   "Price must be greater or equal than %min%.": "Price must be greater or equal than %min%.",
   "Price must be lower or equal than %max%.": "Price must be lower or equal than %max%.",
   "A price is required.": "A price is required.",
@@ -2587,5 +2593,7 @@
   "Only channel members can view this content.": "Only channel members can view this content.",
   "You don't have any channels": "You don't have any channels",
   "To be able to begin receiving payments you have to have at least 1 channel.": "To be able to begin receiving payments you have to have at least 1 channel.",
+  "See all my memberships": "See all my memberships",
+
   "--end--": "--end--"
 }
