(patch) Port more membership strings for earlier translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -136,6 +136,7 @@
   "Recipient address": "Recipient address",
   "Send": "Send",
   "Send --[button to send chat message]--": "Send",
+  "Send --[button to submit something]--": "Send",
   "Receive Credits": "Receive Credits",
   "Send Credits": "Send Credits",
   "Address copied.": "Address copied.",
@@ -2509,14 +2510,13 @@
   "Choose what channel to list supporters for": "Choose what channel to list supporters for",
   "Preview your tiers": "Preview your tiers",
   "See Your Memberships": "See Your Memberships",
-  "Total Supporters:": "Total Supporters:",
-  "Total Monthly Income:": "Total Monthly Income:",
+  "Total Supporters": "Total Supporters",
+  "Total Monthly Income": "Total Monthly Income",
   "Total Monthly Cost": "Total Monthly Income",
-  "Total Received:": "Total Received:",
+  "Total Received": "Total Received",
   "Channel Name": "Channel Name",
   "Supporters": "Supporters",
   "Estimated Monthly Income": "Estimated Monthly Income",
-  "Total Received": "Total Received",
   "Page": "Page",
   "Want to increase your channel growth? Spaceman has whipped up some marketing concepts in the %help_hub%.": "Want to increase your channel growth? Spaceman has whipped up some marketing concepts in the %help_hub%.",
   "Page location copied": "Page location copied",
@@ -2532,10 +2532,8 @@
   "Become A Member": "Become A Member",
   "Become a member": "Become a member",
   "Manage Your Membership Tiers": "Manage Your Membership Tiers",
-  "Signup for $%membership_price% a month": "Signup for $%membership_price% a month",
   "Perks": "Perks",
-  "Join Membership As": "Join Membership As",
-  "Joining Membership": "Joining Membership",
+  "Join %channelName%'s Membership As": "Join %channelName%'s Membership As",
   "Membership Tier": "Membership Tier",
   "Monthly Cost": "Monthly Cost",
   "Features and Perks": "Features and Perks",
@@ -2546,7 +2544,6 @@
   "Members Only": "Members Only",
   "Join for $%membership_price% per month": "Join for $%membership_price% per month",
   "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.": "Support %channel_title% with a monthly membership subscription to help and receive exclusive features.",
-  "Failed to fetch channel list.": "Failed to fetch channel list.",
   "You don't have any Tiers": "You don't have any Tiers",
   "To be able to begin receiving payments you have to add at least 1 Tier to your channel.": "To be able to begin receiving payments you have to add at least 1 Tier to your channel.",
   "Add a Tier": "Add a Tier",
@@ -2594,6 +2591,12 @@
   "You don't have any channels": "You don't have any channels",
   "To be able to begin receiving payments you have to have at least 1 channel.": "To be able to begin receiving payments you have to have at least 1 channel.",
   "See all my memberships": "See all my memberships",
-
+  "Enable members-only comments": "Enable members-only comments",
+  "Disable members-only comments": "Disable members-only comments",
+  "Members-only comments are now disabled.": "Members-only comments are now disabled.",
+  "Members-only comments are now enabled.": "Members-only comments are now enabled.",
+  "This chat is in members-only mode": "This chat is in members-only mode",
+  "This comment section is in members-only mode": "This comment section is in members-only mode",
+  "To participate, consider buying a membership with the members-only perk from this creator!": "To participate, consider buying a membership with the members-only perk from this creator!",
   "--end--": "--end--"
 }
