fix: different strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2512,7 +2512,7 @@
   "See Your Memberships": "See Your Memberships",
   "Total Supporters": "Total Supporters",
   "Total Monthly Income": "Total Monthly Income",
-  "Total Monthly Cost": "Total Monthly Income",
+  "Total Monthly Cost": "Total Monthly Cost",
   "Total Received": "Total Received",
   "Channel Name": "Channel Name",
   "Supporters": "Supporters",
