feat: add the rest of strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -656,8 +656,12 @@
   "This Month": "This Month",
   "This Year": "This Year",
   "Year": "Year",
+  "year": "year",
   "Yearly": "Yearly",
+  "1 Month": "1 Month",
+  "%time_ago% Months": "%time_ago% Months",
   "Month": "Month",
+  "month": "month",
   "Monthly": "Monthly",
   "Publishing": "Publishing",
   "Update published": "Update published",
@@ -2513,6 +2517,9 @@
   "Total Supporters": "Total Supporters",
   "Total Monthly Income": "Total Monthly Income",
   "Total Monthly Cost": "Total Monthly Cost",
+  "Creator revenue": "Creator revenue",
+  "Payment processing fee": "Payment processing fee",
+  "Odysee platform fee": "Odysee platform fee",
   "Total Received": "Total Received",
   "Channel Name": "Channel Name",
   "Supporters": "Supporters",
@@ -2538,7 +2545,9 @@
   "Monthly Cost": "Monthly Cost",
   "Features and Perks": "Features and Perks",
   "Processing payment...": "Processing payment...",
+  "You currently have EUR selected as your preferred currency, currently only USD is supported.": "You currently have EUR selected as your preferred currency, currently only USD is supported.",
   "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!": "You are now a '%membership_tier_name%' member for %creator_channel_name%, enjoy the perks and special features!",
+  "Change Settings": "Change Settings",
   "Membership options": "Membership options",
   "Join Membership": "Join Membership",
   "Members Only": "Members Only",
@@ -2575,9 +2584,11 @@
   "Cancel membership": "Cancel membership",
   "Cancel Membership": "Cancel Membership",
   "This membership does not give you access to the members-only chat mode.": "This membership does not give you access to the members-only chat mode.",
+  "This membership does not give you access to the members-only comment section.": "This membership does not give you access to the members-only comment section.",
   "This Tier does not grant you access to the currently selected content.": "This Tier does not grant you access to the currently selected content.",
   "You can't upgrade or downgrade plans at the moment, coming soon!": "You can't upgrade or downgrade plans at the moment, coming soon!",
   "This membership gives you access to the members-only chat mode.": "This membership gives you access to the members-only chat mode.",
+  "This membership gives you access to the members-only comment section.": "This membership gives you access to the members-only comment section.",
   "This membership gives you access to the current content.": "This membership gives you access to the current content.",
   "A membership name is required.": "A membership name is required.",
   "A membership description is required.": "A membership description is required.",
