feat: missing string

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -132,6 +132,7 @@
   "Full History": "Full History",
   "Refresh": "Refresh",
   "Send Credits to your friends or favorite creators.": "Send Credits to your friends or favorite creators.",
+  "Total Supporting Time": "Total Supporting Time",
   "Amount": "Amount",
   "Recipient address": "Recipient address",
   "Send": "Send",
