feat: missing string

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2610,5 +2610,7 @@
   "This chat is in members-only mode": "This chat is in members-only mode",
   "This comment section is in members-only mode": "This comment section is in members-only mode",
   "To participate, consider buying a membership with the members-only perk from this creator!": "To participate, consider buying a membership with the members-only perk from this creator!",
+  "Premium Beta": "Premium Beta",
+  "Sorry, this functionality is only available for Odysee Premium users currently.": "Sorry, this functionality is only available for Odysee Premium users currently.",
   "--end--": "--end--"
 }
