--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1517,6 +1517,7 @@
   "%commenter% sent a %amount% hyperchat on %title%": "%commenter% sent a %amount% hyperchat on %title%",
   "%creator_name%, you have a new member!": "%creator_name%, you have a new member!",
   "%new_member_name% has joined: %membership_tier_name%": "%new_member_name% has joined: %membership_tier_name%",
+  "An anonymous user": "An anonymous user",
   "%streamer% is live streaming!": "%streamer% is live streaming!",
   "New content from %creator%": "New content from %creator%",
   "%commenter% commented on %title%": "%commenter% commented on %title%",
