refactor: move error messages (#2243)

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2616,6 +2616,7 @@
   "To participate, consider buying a membership with the members-only chat perk from this creator!": "To participate, consider buying a membership with the members-only chat perk from this creator!",
   "Premium Beta": "Premium Beta",
   "Sorry, this functionality is only available for Odysee Premium users currently.": "Sorry, this functionality is only available for Odysee Premium users currently.",
+  "Join Premium": "Join Premium",
   "Only USD banking currently supported, please check back later!": "Only USD banking currently supported, please check back later!",
   "Bank account connected": "Bank account connected",
   "--end--": "--end--"
