fix: missing strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1970,6 +1970,8 @@
   "HyperChat min: %lbc%": "HyperChat min: %lbc%",
   "The creator just updated the minimum setting. Please revise or double-check your tip amount.": "The creator just updated the minimum setting. Please revise or double-check your tip amount.",
   "Settings unavailable for this channel": "Settings unavailable for this channel",
+  "Make comments members-only": "Make comments members-only",
+  "Make livestream chat members-only": "Make livestream chat members-only",
   "This channel isn't staking enough LBRY Credits to enable Creator Settings.": "This channel isn't staking enough LBRY Credits to enable Creator Settings.",
   "Not a channel (prefix with \"@\", or enter the channel URL)": "Not a channel (prefix with \"@\", or enter the channel URL)",
   "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.": "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.",
@@ -2586,6 +2588,7 @@
   "Create Your Memberships": "Create Your Memberships",
   "You need to link a credit card in order to purchase.": "You need to link a credit card in order to purchase.",
   "Take me there": "Take me there",
+  "Only channel members with \"Members-only chat\" perk can participate in public comments sections.": "Only channel members with \"Members-only chat\" perk can participate in public comments sections.",
   "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.": "Only channel members with \"Members-only chat\" perk can participate in public livestream chats.",
   "Cancel membership": "Cancel membership",
   "Cancel Membership": "Cancel Membership",
