fix: confusing labels on right states

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -900,6 +900,7 @@
   "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.": "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.",
   "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.": "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.",
   "Sign Up": "Sign Up",
+  "Sign up": "Sign up",
   "Add A Password": "Add A Password",
   "Hide members-only content": "Hide members-only content",
   "Hide reposts": "Hide reposts",
@@ -995,7 +996,7 @@
   "Please %sign_in_link% to comment.": "Please %sign_in_link% to comment.",
   "Replying as %reply_channel%": "Replying as %reply_channel%",
   "Error ID: %sentryEventId%": "Error ID: %sentryEventId%",
-  "%channel_name% is waiting for you on %SITE_NAME%. Create your account now.": "%channel_name% is waiting for you on %SITE_NAME%. Create your account now.",
+  "%channel_name% is waiting for you on %site_name%. %signup_link% to claim it.": "%channel_name% is waiting for you on %site_name%. %signup_link% to claim it.",
   "Content freedom and a present are waiting for you. %signup_link% to claim it.": "Content freedom and a present are waiting for you. %signup_link% to claim it.",
   "Finish Account": "Finish Account",
   "Create Account": "Create Account",
