fix: can't purchase if cancelled

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2347,6 +2347,7 @@
   "Auto-Renews On": "Auto-Renews On",
   "Canceled On": "Canceled On",
   "Still Valid Until": "Still Valid Until",
+  "Ended on": "Ended on",
   "Active channel": "Active channel",
   "Select your default active channel": "Select your default active channel",
   "What's New": "What's New",
