--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1102,6 +1102,7 @@
   "Boost Your List": "Boost Your List",
   "Tip This %claimTypeText%": "Tip This %claimTypeText%",
   "Send a %amount% tip": "Send a %amount% tip",
+  "Send a %amount% Tip": "Send a %amount% Tip",
   "Boost": "Boost",
   "Boost transaction successful.": "Boost transaction successful.",
   "Boost transaction failed.": "Boost transaction failed.",
@@ -1313,6 +1314,7 @@
   "Artists": "Artists",
   "Bit Hits": "Bit Hits",
   "Comedy": "Comedy",
+  "Docs & Films": "Docs & Films",
   "Education": "Education",
   "Enlightenment": "Enlightenment",
   "Entertainment": "Entertainment",
